updated div names to make it more recognisable

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <!--header with navigation on top-->>
         <div class="header">
             <div class="logo">
                 Moon
@@ -17,56 +18,61 @@
                 <a href="/linkthree">header link three</a>
             </div>
         </div>
-        <div class="first">
 
-            <div class="welcome_content">
-              <div class="welcome_text">
-                <div class="main_text">This website is awesome</div>
+        <!--welcome section-->>
+        <div class="welcome">
+            <div class="welcome-content">
+              <div class="welcome-text">
+                <div class="main-text">This website is awesome</div>
                 This website has some subtext that goes here under the main title.
                 It's a smaller font and the color is lower contrast.<br>
                 <button>Sign up</button>
               </div>
 
-              <div class="astronaut_image">
+              <div class="welcome-images">
                 <img src="moon.jpg" alt="moon">
                 <img src="astronaut.jpg" alt="astronaut">
               </div>
             </div>
-
         </div>
 
-        <div class="second">
-
+        <!--random information section-->
+        <div class="random-information">
             <div class="title">Some random information.</div>
-            <div class="infoWindows">
-                <div class="infoBox">
+            <div class="information-windows">
+                <div class="information-box">
                     <img src="h20_ColinBehrens_ColiN00B.png" alt="h20 structure">
                     <div class="infoBoxText">Confirmed water on the moon. By NASA SOFIA in 2020.</div>
                 </div>
-                <div class="infoBox">
+                <div class="information-box">
                     <img src="far_side_of_moon.jpg" alt="far side of moon">
                     <div class="infoBoxText">Far side of the moon</div>
                 </div>
-                <div class="infoBox">
+                <div class="information-box">
                     <img src="blue_moon_thomas_pixabay.jpg" alt="blue moon">
                     <div class="infoBoxText">Blue supermoon on Thursday 31 August 2023. Last one in 2009. Next one in 2032.</div>
                 </div>
-                <div class="infoBox">
+                <div class="information-box">
                     <img src="india_moon_landing.png" alt="no photo">
                     <div class="infoBoxText">India successfully landed Chandrayaan-3 spacecraft on the moon, 23 August 2023.</div>
                 </div>
             </div>
-
         </div>
-        <div class="third">
-            <div class="quotebox">
+
+        <!--quote section-->
+        <div class="quote-section">
+            <div class="quote-box">
                 <div class="quote">“That’s one small step for man, one giant leap for mankind.”</div>
                 <div class="quoter">-Neil Armstrong, First Person to walk on the Moon</div>
             </div>
         </div>
-        <div class="fourth">
 
+        <!--advertisement section-->
+        <div class="advertisement">
+            <!--as an audience, aye ate ads-->
         </div>
+
+        <!--footer with copyright warning-->
         <div class="footer">
             <div class="copyright">Copyright &copy; The Odin Project 2021</div>
         </div>
