--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <!--header with navigation on top-->>
+        <!--header with navigation on top-->
         <div class="header">
             <div class="logo">
                 Moon
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        <!--welcome section-->>
+        <!--welcome section-->
         <div class="welcome">
             <div class="welcome-content">
               <div class="welcome-text">
