changed navigation bar to align with the page

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -7,33 +7,32 @@
     </head>
 
     <body>
-        <!--header with navigation on top-->
+        <!--header - navigation on top, welcome section bottom-->
         <div class="header">
-            <div class="logo">
-                Moon
+            <div class="navbar">
+                <div class="logo">
+                    Moon
+                </div>
+                <div class="nav">
+                    <a href="/linkone">header link one</a>
+                    <a href="/linktwo">header link two</a>
+                    <a href="/linkthree">header link three</a>
+                </div>
             </div>
-            <div class="nav">
-                <a href="/linkone">header link one</a>
-                <a href="/linktwo">header link two</a>
-                <a href="/linkthree">header link three</a>
-            </div>
-        </div>
-
-        <!--welcome section-->
-        <div class="welcome">
+            <!--welcome section-->
             <div class="welcome-content">
-              <div class="welcome-text">
-                <div class="main-text">This website is awesome</div>
-                This website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast.<br>
-                <button>Sign up</button>
+                <div class="welcome-text">
+                  <div class="main-text">This website is awesome</div>
+                  This website has some subtext that goes here under the main title.
+                  It's a smaller font and the color is lower contrast.<br>
+                  <button>Sign up</button>
+                </div>
+  
+                <div class="welcome-images">
+                  <img src="moon.jpg" alt="moon">
+                  <img src="astronaut.jpg" alt="astronaut">
+                </div>
               </div>
-
-              <div class="welcome-images">
-                <img src="moon.jpg" alt="moon">
-                <img src="astronaut.jpg" alt="astronaut">
-              </div>
-            </div>
         </div>
 
         <!--random information section-->
