--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -10,6 +10,8 @@
     </body>
 
     <script>
-        
+        function getComputerChoice() {
+            const shapes = ["rock", "paper", "scissors"];
+        }
     </script>
 </html>
