written getComputerChoice function to return a random shape
tested getComputerChoice function

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -12,6 +12,16 @@
     <script>
         function getComputerChoice() {
             const shapes = ["rock", "paper", "scissors"];
+            let random = Math.floor(Math.random() * shapes.length);
+            return shapes[random];
         }
+
+        console.log("test get ComputerChoice() function");
+        console.log(getComputerChoice());
+        console.log(getComputerChoice());
+        console.log(getComputerChoice());
+        console.log(getComputerChoice());
+        console.log(getComputerChoice());
+        console.log(getComputerChoice());
     </script>
 </html>
