added function to play a round of rock paper scissors
tested round function

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -2,6 +2,7 @@
 <html lang="en-nz">
     <head>
         <meta charset="utf-8">
+        <script src="script.js"></script>
         <title>Rock Paper Scissors</title>
     </head>
 
@@ -9,19 +10,5 @@
 
     </body>
 
-    <script>
-        function getComputerChoice() {
-            const shapes = ["rock", "paper", "scissors"];
-            let random = Math.floor(Math.random() * shapes.length);
-            return shapes[random];
-        }
-
-        console.log("test get ComputerChoice() function");
-        console.log(getComputerChoice());
-        console.log(getComputerChoice());
-        console.log(getComputerChoice());
-        console.log(getComputerChoice());
-        console.log(getComputerChoice());
-        console.log(getComputerChoice());
-    </script>
+    
 </html>
