removed game function of five rounds

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -7,7 +7,11 @@
     </head>
 
     <body>
-
+        <div class="rpsButtons">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
     </body>
 
     
