designed rock, paper, scissors button to liking

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css">
         <title>Rock Paper Scissors</title>
     </head>
 
     <body>
         <div class="rpsButtons">
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
+            <button><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
+            <button><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
         </div>
     </body>
 
