added button shadows on hover

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -19,6 +19,7 @@
                     <button><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
                 </div>
             </div>
+            <div class="scoreBoard"><div id="playerScore"></div>-<div id="playerScore"></div></div>
             <div class="playerScoreArea">
                 <div class="playerHeading">Computer</div>
                 <div class="rpsButtons">
