updated plan for user interface interaction to be performed on javascript. hungry now adios

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -14,12 +14,12 @@
             <div class="playerScoreArea">
                 <div class="playerHeading">You</div>
                 <div class="rpsButtons">
-                    <button><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
-                    <button><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
-                    <button><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
+                    <button class="selectableButton"><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
+                    <button class="selectableButton"><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
+                    <button class="selectableButton"><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
                 </div>
             </div>
-            <div class="scoreBoard"><div id="playerScore"></div>-<div id="playerScore"></div></div>
+            <div class="scoreBoard"><div class="playerScore"></div>-<div class="playerScore"></div></div>
             <div class="playerScoreArea">
                 <div class="playerHeading">Computer</div>
                 <div class="rpsButtons">
