designed reset button

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -29,8 +29,8 @@
                 </div>
             </div>
         </div>
-        <div class="log"></div>
-        <button class="reset">Reset</button>
+        <div class="centerWrapper"><button class="reset">Reset</button></div>
+        <div class="log">Log</div>
     </body>
 
     
