completed basic game

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -19,17 +19,17 @@
                     <button id="scissors" class="selection selectableButton"><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
                 </div>
             </div>
-            <div class="scoreBoard"><div class="score"></div>-<div class="score"></div></div>
+            <div class="scoreBoard"><div class="playerScore">0</div>-<div class="computerScore">0</div></div>
             <div class="playArea">
-                <div class="playerHeading">Computer</div>
+                <div class="computerHeading">Computer</div>
                 <div class="rpsButtons">
-                    <button class="selection"><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
-                    <button class="selection"><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
-                    <button class="selection"><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
+                    <button class="selection nonSelectableButton"><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
+                    <button class="selection nonSelectableButton"><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
+                    <button class="selection nonSelectableButton"><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
                 </div>
             </div>
         </div>
-        <div class="centerWrapper"><button class="reset">Reset</button></div>
+        <div class="centerWrapper"><button class="reset" onclick="window.location.reload()">Reset</button></div>
         <div class="log">Log</div>
     </body>
 
