added feature - show computer's selection, removed all tests, user interface complete

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -23,14 +23,14 @@
             <div class="playArea">
                 <div class="computerHeading">Computer</div>
                 <div class="rpsButtons">
-                    <button class="selection nonSelectableButton"><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
-                    <button class="selection nonSelectableButton"><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
-                    <button class="selection nonSelectableButton"><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
+                    <button id="computer-rock" class="selection nonSelectableButton"><div class="caption">Rock</div><img src="rock-OpenClipart-Vectors-Pixabay.png"/></button>
+                    <button id="computer-paper" class="selection nonSelectableButton"><div class="caption">Paper</div><img src="paper-ki-kieh-Pixabay.png"/></button>
+                    <button id="computer-scissors" class="selection nonSelectableButton"><div class="caption">Scissors</div><img src="scissors-MarkBaird-Pixabay.png"/></button>
                 </div>
             </div>
         </div>
-        <div class="centerWrapper"><button class="reset" onclick="window.location.reload()">Reset</button></div>
-        <div class="log">Log</div>
+        <div class="centerWrapper"><button class="reset" onclick="window.location.reload()">RESET</button></div>
+        <div class="log">LOG</div>
     </body>
 
     
